Add logging for file data in submitJob

--- a/index.html
+++ b/index.html
@@ -515,6 +515,10 @@
         });
     }
 
+    // Log the file data to check if it's being read correctly
+    console.log("File Name:", fileName);
+    console.log("File Data:", fileData);
+
     // Prepare job data
     const jobData = {
         address: address,
