--- a/index.html
+++ b/index.html
@@ -338,14 +338,14 @@
     height: 40px;
     overflow-x: auto;
     position: relative;
+    gap: 2px;
 }
 .minute-bar {
     flex: 1;
-    min-width: 10px;
+    min-width: 8px;
     background-color: #4b6cb7;
     opacity: 0.6;
     position: relative;
-    margin-right: 2px;
 }
 .minute-bar-label {
     position: absolute;
@@ -383,9 +383,14 @@
     padding: 20px;
     border-radius: 16px;
     width: 90%;
-    max-width: 600px;
+    max-width: 800px; /* Increased width for desktop */
     position: relative;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+@media (max-width: 600px) {
+    .weather-modal-content {
+        max-width: 90%;
+    }
 }
 .close-modal {
     position: absolute;
@@ -411,7 +416,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 0;
+    padding: 15px 0;
     border-bottom: 1px solid #333;
     cursor: pointer;
 }
@@ -421,18 +426,26 @@
 .forecast-day:hover {
     background-color: #333;
 }
+.forecast-day.bounce {
+    animation: bounce 0.3s ease;
+}
+@keyframes bounce {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
+}
 .temp-bar {
     flex-grow: 1;
     height: 8px;
     background: linear-gradient(to right, #4b6cb7, #f7b733);
     border-radius: 4px;
     position: relative;
-    margin: 0 10px;
+    margin: 0 15px;
 }
 .temp-marker {
     position: absolute;
     top: -20px;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     color: #999;
 }
 .temp-marker.low {
@@ -454,7 +467,7 @@
 .hourly-forecast {
     display: flex;
     overflow-x: auto;
-    gap: 10px;
+    gap: 15px;
     padding-bottom: 10px;
 }
 .hourly-forecast div {
@@ -888,6 +901,16 @@ async function fetchWeather(event) {
 // Toggle expandable day details and collapse others
 function toggleDayDetails(index) {
     event.stopPropagation(); // Prevent modal from closing
+
+    // Check if the day has hourly data (only current day and next day have data)
+    const hasHourlyData = index <= 1; // Current day (0) and next day (1)
+
+    if (!hasHourlyData) {
+        // Apply bounce effect for days without hourly data
+        const dayElement = document.querySelectorAll('.forecast-day')[index];
+        dayElement.classList.add('bounce');
+        return;
+    }
 
     // Collapse all other expanded details
     const allDetails = document.querySelectorAll('.forecast-details');
